--- a/webapp/src/main/resources/templates/lexica/viewLexicon.html
+++ b/webapp/src/main/resources/templates/lexica/viewLexicon.html
@@ -6,6 +6,7 @@
         <div class="container" th:replace="~{base :: header (title=${lexicontitle})}"></div>
 
         <form class="form-inline" th:object="${selector}" method="post">
+            <div class="form-group">
                 <label th:text="|#{galloitalici.kb.lexica.selection.label} #{galloitalici.kb.lexica.selection.pos.label}|">Select label</label>
                 <select class="custom-select" th:field="*{pos}">
                     <option th:value="|any|" th:text="#{galloitalici.kb.lexica.selection.pos.any}"></option>
@@ -18,10 +19,23 @@
                     <option th:value="${gskb.hasNorthernItalyFeatureClass}" th:text="#{galloitalici.kb.lexica.selection.features.northern}"></option>
                     <option th:value="${gskb.hasSouthernItalyFeatureClass}" th:text="#{galloitalici.kb.lexica.selection.features.southern}"></option>
                 </select -->
-                <input type="submit" class="btn btn-primary" th:value="#{galloitalici.kb.lexica.selection.sumbmit}" />
+            <button id="page" name="page" type="submit" class="btn btn-primary" th:value="*{page}" th:text="#{galloitalici.kb.lexica.selection.sumbmit}"></button>
+            </div>
+            <div class="form-group">
+                <!-- results pagination -->
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li th:class="${iterStatus.index}==*{page} ? 'page-item active' : 'page-item'" th:each="p, iterStatus: ${pages}">
+                            <button name="page" th:class="page-link" th:value="${iterStatus.index}" th:text="${p.label}">page</button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </form>
         <p class="btn btn-info" th:text="#{galloitalici.kb.lexica.selection.numentries(${size})}">Trovati n elementi.</p>
 
+
+        <!-- entries -->
         <table class="table table-bordered">
             <tbody th:each="entry : ${entries}">
                 <tr class="table-primary">
