#13 Web form for automatic findings of Sicilian Etymon

--- a/webapp/src/main/resources/templates/derivation/derivationForm.html
+++ b/webapp/src/main/resources/templates/derivation/derivationForm.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <label class="col-form-label col-2" for="lemmaField" th:text="#{galloitalici.kb.derivation.lemma}">Lemma</label>
                 <div class="col">
-                    <input id="lemmaField" type="text" class="form-control" th:field="*{lemma}" />
+                    <input id="lemmaField" type="text" class="form-control" th:field="*{lemma}" required="true" />
                 </div>
             </div>
             <div class="row">
