--- a/webapp/src/main/resources/templates/lexica/viewLexicon.html
+++ b/webapp/src/main/resources/templates/lexica/viewLexicon.html
@@ -48,7 +48,7 @@
                     </td>
                     <td th:unless="${#sets.isEmpty(entry.latinEtymon)}">
                         <ul>
-                            <li class="btn btn-outline-primary" th:each="c : ${entry.latinEtymon}"><span th:if="${c.seeAlso == null}" th:remove="tag" th:text="${c.name}">etymon</span><a th:unless="${c.seeAlso == null}" th:href="${c.seeAlso}" th:text="${c.name}">etymon</a></li>
+                            <li class="btn btn-outline-primary" th:each="c : ${entry.latinEtymon}"><span th:if="${c.seeAlso == null}" th:remove="tag" th:text="${c.label}">etymon</span><a th:unless="${c.seeAlso == null}" th:href="${c.seeAlso}" th:text="${c.label}">etymon</a></li>
                         </ul>
                     </td>
                 </tr>
