--- a/webapp/src/main/resources/templates/base.html
+++ b/webapp/src/main/resources/templates/base.html
@@ -6,6 +6,8 @@
     <title th:text="#{galloitailici.kb.title}">The Galloitalici Project Knowledge Base</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <!-- for etymologies -->
+    <link th:href="@{/liph.css}" rel="stylesheet" />
 </head>
 <body>
     <div class="container" th:fragment="header(title)">
