Link to project home #53

--- a/webapp/src/main/resources/templates/base.html
+++ b/webapp/src/main/resources/templates/base.html
@@ -27,6 +27,11 @@
                     <img class="img-fluid" th:src="@{/unict.png}" alt="Università di Catania" />
                 </div>
             </div>
+            <div class="row justify-content-end align-items-center" style="text-align:right">
+                <div class="col">
+                    <a class="btn btn-primary mb-2" th:text="#{galloitailici.kb.title}" th:href="@{/}">Gallo-Siciliani Initiative</a>
+                </div>
+            </div>
         </div>
         <h1 th:text="${title}">Page title missing</h1>
     </div>
