--- a/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
+++ b/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
@@ -14,6 +14,7 @@
             <ul class="list-group">
                 <li class="list-group-item" th:each="r : ${results}">
                     <a th:href="@{${r.id}}" th:text="${r.label}"></a>
+                    <a th:href="@{|${r.id}/ttl|}" th:text="|(#{galloitalici.kb.ttl})|"></a>
                 </li>
             </ul>
         </div>
