--- a/webapp/src/main/resources/templates/ontologies/viewLiph.html
+++ b/webapp/src/main/resources/templates/ontologies/viewLiph.html
@@ -4,13 +4,36 @@
 <body>
 <div class="container">
     <div class="container" th:replace="~{base :: header (title=${title})}"></div>
-    <div class="container">
         <div class="container">
             <p th:text="${comment}">Project description</p>
         </div>
+
+    <div class="container">
         <h2>Classes</h2>
+        <div class="card" th:each="c: ${classes}">
+            <div class="card-body">
+                <h3 class="card-title" th:id="${c.id}" th:text="${c.label}">Missing class label</h3>
+                <p class="card-text" th:text="${c.comment}">Missing class description</p>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
         <h2>Object Properties</h2>
+        <div class="card" th:each="c: ${objproperties}">
+            <div class="card-body">
+                <h3 class="card-title" th:id="${c.id}" th:text="${c.label}">Missing class label</h3>
+                <p class="card-text" th:text="${c.comment}">Missing class description</p>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
         <h2>Datatype Properties</h2>
+        <div class="card" th:each="c: ${dataproperties}">
+            <div class="card-body">
+                <h3 class="card-title" th:id="${c.id}" th:text="${c.label}">Missing class label</h3>
+                <p class="card-text" th:text="${c.comment}">Missing class description</p>
+            </div>
+        </div>
     </div>
 </div>
 </body>
