toolchain: derivations imported #79

--- a/webapp/src/main/resources/templates/workflow/viewWorkflow.html
+++ b/webapp/src/main/resources/templates/workflow/viewWorkflow.html
@@ -27,7 +27,7 @@
     </p>
 
     <p>This file is then revised and reworked by lexicographers that eliminate multiple derivations for the same lemma,
-    remove unplausible one, and add further derivations produced using the <a href="/derivation">online derivation tool</a>.</p>
+    remove unplausible ones, and add further derivations produced using the <a href="/derivation">online derivation tool</a>.</p>
 
     <p><a th:href="derivations-revised.csv" type="text/csv">derivations-revised.csv</a> is the file that resulted
     after the manual intervention of lexicographers.</p>
