toolchain:verifier #80, added links from the project page

--- a/webapp/src/main/resources/templates/lexica/viewLexicon.html
+++ b/webapp/src/main/resources/templates/lexica/viewLexicon.html
@@ -37,6 +37,8 @@
             </div>
         </form>
         <p class="btn btn-info" th:text="#{galloitalici.kb.lexica.selection.numentries(${size})}">Trovati n elementi.</p>
+        <p>The whole production workflow for this ontology,
+            aside with all the software tools and intermediate products, is available in the <a th:href="@{/ns/lexica/nicosiaesperlinga/workflow}">workflow</a> page.</p>
 
 
         <!-- entries -->
