--- a/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
+++ b/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
@@ -11,7 +11,15 @@
             <a th:href="@{${r.id}}" th:text="${r.label}"></a>
         </li>
     </ul>
+</div>
 
+<div class="container">
+    <p>The whole production workflow for the ontology of <a th:href="@{/ns/lexica/nicosiaesperlinga/workflow}">Nouns and Verbs of the Gallo-Italic variety spoken in Nicosia and Sperlinga</a>,
+        aside with all the software tools and intermediate products, is available in the <a th:href="@{/ns/lexica/nicosiaesperlinga}">workflow</a> page.</p>
+
+    <p>
+    In addition, the <a th:href="@{https://github.com/Gallosiciliani/languagefeatures}">Gallo-Siciliani github repository</a>
+    provide all the source codes of these tools.</p>
 </div>
 </body>
 </html>
