toolchain:verifier #80, added links from the project page

--- a/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
+++ b/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
@@ -21,5 +21,24 @@
     In addition, the <a th:href="@{https://github.com/Gallosiciliani/languagefeatures}">Gallo-Siciliani github repository</a>
     provide all the source codes of these tools.</p>
 </div>
+
+<div class="container">
+    <p>Finally, the scientific works funded by the project are the followings:</p>
+    <ul class="list-group">
+        <li class="list-group-item">
+            <a th:href="@{https://www.mdpi.com/2226-471X/8/3/163}">The Strange Case of the Gallo-Italic Dialects of Sicily: Preservation and Innovation in Contact-Induced Change</a>
+        </li>
+        <li class="list-group-item">
+            <a th:href="@{https://riviste.unige.it/index.php/polyphonie/article/view/2396}">Sulla creatività linguistica della perifrasi ‘mostrare a’ + infinito nel dialetto galloitalico di Nicosia</a>
+        </li>
+        <li class="list-group-item">
+            <a th:href="@{https://edizionicafoscari.unive.it/it/edizioni4/riviste/annali-di-ca-foscari-serie-occidentale/2024/58/contact-induced-change-in-sicilian-gallo-italic/}">Contact-induced change in Sicilian Gallo-Italic. The multipurpose Aviri a + Infinitive Construction in the dialect of Nicosia</a>
+        </li>
+        <li class="list-group-item">
+            <a th:href="@{https://ceur-ws.org/Vol-3809/paper2.pdf}">An OWL Ontology for Linguistic Phenomena with
+                Applications to Gallo-Italic Dialects in Sicily</a>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
