new format for derivations extractor output #84

--- a/webapp/src/main/resources/templates/workflow/viewWorkflow.html
+++ b/webapp/src/main/resources/templates/workflow/viewWorkflow.html
@@ -126,36 +126,9 @@
             <td>`sì` if there is some feature belonging to the category <a th:href="@{/ns/gs-features#Vocal}">Vocalization</a>, `no` otherwise</td>
         </tr>
         <tr>
-            <th scope="row">microtratto 1</th>
-            <td>for the first feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 2</th>
-            <td>for the second feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 3</th>
-            <td>for the third feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 4</th>
-            <td>for the fourth feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 5</th>
-            <td>for the fifth feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 6</th>
-            <td>for the sixth feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 7</th>
-            <td>for the seventh feature in the derivation, if any</td>
-        </tr>
-        <tr>
-            <th scope="row">microtratto 8</th>
-            <td>for the eighth feature in the derivation, if any</td>
+            <th scope="row">Phenomena</th>
+            <td>A set of cells, one for each phenomenon in the Gallo-Sicilian features ontology. 'sì' means that the phenomenon occurred in the derivation.
+                'no' that it did not occur, but was expected as it applies to the etymon. 'NA' stays for a phenomenon which not affects the etymon.</td>
         </tr>
         </tbody>
     </table>
