add "The gender system in the Gallo-Italic minority varieties in Sicily between convergence and diversity " #88

--- a/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
+++ b/webapp/src/main/resources/templates/ontologies/viewGallosiciliani2023Project.html
@@ -54,6 +54,11 @@
             <a th:href="@{https://forumeditrice.it/percorsi/lingua-e-letteratura/convegni/lingue-minoritarie-italiano-nel-mondo}">Bad rules, good rules: il caso della marcatura differenziale
                 dell’oggetto in un dialetto galloitalico di Sicilia</a>
         </li>
+        <li class="list-group-item">
+            <a th:href="@{https://revistes.uab.cat/isogloss/article/view/v11-n6-castiglione}">
+                The gender system in the Gallo-Italic minority varieties in Sicily between convergence and diversity
+            </a>
+        </li>
     </ul>
 </div>
 </body>
